# scanner-rs

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CROSS_COMPILE_SETUP.md  Cargo.toml  Makefile  README.md  RELEASE.md  RELEASE_ALL_README.md  RELEASE_QUICK_START.md  RELEASE_SUMMARY.md  RELEASING.md  TROUBLESHOOTING.md  check-release.sh  cross-compile.sh  docker-build-linux.sh  packages.txt  release-all.sh  release.sh  research.md  setup-hooks.sh
.github/: RELEASE_CHECKLIST.md
.github/workflows/: release.yml
.kiro/specs/installed-package-analysis/: design.md  requirements.md  tasks.md
.kiro/specs/multi-language-dependency-scanner/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
dashboard/: README.md  app.py  pyproject.toml  run.sh
dashboard/pages/: 1_📦_Node_Packages.py  2_🐍_Python_Packages.py  3_🦀_Rust_Packages.py
docs/: BUILD_AND_RELEASE.md  CROSS_COMPILE.md  CROSS_COMPILE_SETUP.md  DOCKER_BUILDS.md  IMPLEMENTATION_SUMMARY.md  INFECTED_PACKAGE_DETECTION.md  INSTALLED_PACKAGE_ANALYSIS.md  PRE_COMMIT_HOOKS.md  PRE_COMMIT_QUICK_REFERENCE.md  README.md  RELEASE_DOCS.md  RELEASING.md  SCAN_SUPPLYCHAIN.md  TROUBLESHOOTING.md  research.md
examples/: infected-packages-sample.csv
src/: lib.rs  main.rs
src/analyzer/: app_linker.rs  classifier.rs  mod.rs  tree_builder.rs  version_matcher.rs  vuln_filter.rs
src/indexer/: file_types.rs  install_dirs.rs  mod.rs
src/models/: application.rs  classification.rs  dependency.rs  dependency_tree.rs  error.rs  installed_package.rs  mod.rs  scan_result.rs
src/output/: csv_writer.rs  json_writer.rs  mod.rs
src/parsers/: mod.rs  registry.rs
src/parsers/installed/: metadata.rs  mod.rs  node_modules.rs  site_packages.rs
src/parsers/lockfile/: cargo_lock.rs  mod.rs  package_lock_json.rs  pnpm_lock_yaml.rs  poetry_lock.rs  uv_lock.rs  yarn_lock.rs
src/parsers/manifest/: cargo_toml.rs  mod.rs  package_json.rs  pyproject_toml.rs  requirements_txt.rs
src/version/: mod.rs  node_semver.rs  python_pep440.rs  rust_semver.rs
tests/fixtures/node/: package-lock.json  package.json  pnpm-lock.yaml
tests/fixtures/python/: pyproject.toml  requirements.txt
tests/fixtures/rust/: Cargo.toml
tests/parsers/: lockfile_tests.rs  mod.rs  package_json_tests.rs  python_lockfile_tests.rs  python_manifest_tests.rs  rust_tests.rs
