[package]
name = "scanner"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to scan directories for npm package compatibility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/scanner"
keywords = ["npm", "package", "scanner", "lockfile"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7"
regex = "1.10"
serde_json = "1.0"
walkdir = "2.4"
csv = "1.3"
num_cpus = "1.16"
