[package]
name = "scanner"
version = "0.2.2"
edition = "2021"
authors = ["Jacob Verhoeks <jacdob@verhoeks.org>"]
description = "A tool to scan directories for npm package compatibility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/scanner"
keywords = ["npm", "package", "scanner", "lockfile"]
categories = ["command-line-utilities"]

[dependencies]
# CLI and core
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"
rayon = "1.7"
walkdir = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Output
csv = "1.3"

# Error handling
thiserror = "1.0"

# Parsing
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
