[project]
name = "test-project"
version = "1.0.0"
dependencies = [
    "requests>=2.28.0",
    "numpy==1.24.0",
    "pandas~=2.0.0"
]

[tool.poetry]
name = "test-project"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.0"
celery = {version = "^5.3.0", extras = ["redis"]}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
